--- a/hobbies.html
+++ b/hobbies.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Currículo Pessoal</h1>
     <nav>
-        <a href="identificacao.html" target="conteudo">Sobre mim</a> |
+        <h3><a href="identificacao.html" target="conteudo">Sobre mim</a> |
         <a href="formacao.html" target="conteudo">Formação</a> |
         <a href="experiencia.html" target="conteudo">Experiência</a> |
-        <a href="hobbies.html" target="conteudo">Hobbies</a>
+        <a href="hobbies.html" target="conteudo">Hobbies</a></h3>
     </nav>
     <hr>
     <h2>Hobbies:</h2>
