--- a/hobbies.html
+++ b/hobbies.html
@@ -15,7 +15,7 @@
     </nav>
     <hr>
     <h2>Hobbies:</h2>
-<p>. Gosto de praticar exercicios fisico e de correr, gosto muito de ir a praia e de praticar esportes como, futebol, volei e até mesmo um pouco de basquet.<br>  Sou muito comunicativo, não sou mas gosto das coisas bem organizada, trabalho bem em equipe, sou  focado nos objetivos que quero para minha vida.</p>
+<p>. Gosto de praticar exercicios fisico e de correr, gosto muito de ir a praia e de praticar esportes como, futebol, volei e até mesmo um pouco de basquete.<br>  Sou muito comunicativo, não sou perfeccionista mas gosto das coisas bem organizada, trabalho bem em equipe, sou focado nos objetivos que quero para minha vida.</p>
    
 <p>
 <title>Tabela com Espaçamento</title>
