--- a/hobbies.html
+++ b/hobbies.html
@@ -25,7 +25,7 @@
 <table>
   <tr>
     <th>Softs Skills</th>
-    <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CapCut</th>
+    <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hards Skillst</th>
   </tr>
   <tr>
     <td>Dedicado</td>
